fix spacing

--- a/src/sections/About/About.module.scss
+++ b/src/sections/About/About.module.scss
@@ -13,10 +13,9 @@
 
 .sectionColumn {
   flex: 1;
-  margin: 0 15px;
 
   & + & {
-    padding-top: 35px;
+    padding-top: 25px;
   }
 }
 
@@ -27,6 +26,8 @@
 
 @media only screen and (min-width: $tablet) {
   .sectionColumn {
+    margin: 0 15px;
+
     & + & {
       padding-top: 0px;
     }
